// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LocationDisplay component should match snapshot with text as , 1`] = `
<header>
  <span>
    <Component />
  </span>
  <h1>
    , 
  </h1>
</header>
`;

exports[`LocationDisplay component should match snapshot with text as city, 1`] = `
<header>
  <span>
    <Component />
  </span>
  <h1>
    city
    , 
  </h1>
</header>
`;

exports[`LocationDisplay component should match snapshot with text as city, state 1`] = `
<header>
  <span>
    <Component />
  </span>
  <h1>
    city
    , 
    state
  </h1>
</header>
`;
